--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="menu_clear_all">Clear all</string>
     <string name="menu_generate_debts">Generate debts</string>
 
+    <string name="hint_name">Name</string>
+    <string name="hint_sum">Sum</string>
+    <string name="save">Save</string>
+
+    <string name="err_required">Required field</string>
+
 </resources>
