delete debt popmenu added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="save">Save</string>
 
     <string name="err_required">Required field</string>
+    <string name="delete">Delete</string>
 
 </resources>
