showSuccessSnakbar util method added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,9 @@
     <string name="save">Save</string>
 
     <string name="err_required">Required field</string>
+
     <string name="delete">Delete</string>
+    <string name="success_debt_deleted">Success deleted</string>
+    <string name="success_debt_saved">Debt saved</string>
 
 </resources>
